--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/png" href="favicon.png">
-  <title>Scott Lowry - Systems Engineer | IAM & MDM Specialist</title>
-  <meta name="description" content="Scott Lowry is a seasoned Systems Engineer specializing in Microsoft 365, Entra ID, Intune, and Zero Trust architecture."/>
+  <title>Scott Lowry - Microsoft Security Architect</title>
+  <meta name="description" content="Microsoft Security Architect with expertise in Microsoft 365, Entra ID, Intune, and Defender. Builds secure, scalable identity and endpoint strategies using Conditional Access, PIM, and automation across hybrid and cloud-only environments. Focused on Zero Trust, compliance, and business alignment."/>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -72,98 +72,85 @@
     <h1>Scott Lowry</h1>
     <p>
       Springfield, OR<br />
-      <a href="mailto:Scott@ScottLowry.net">Scott@ScottLowry.net</a> | <a href="https://www.linkedin.com/in/scott-m-lowry/" target="_blank">LinkedIn</a>
+      <a href="/cdn-cgi/l/email-protection#f2a1919d8686b2a1919d8686be9d85808bdc9c9786"><span class="__cf_email__" data-cfemail="f1a2929e8585b1a2929e8585bd9e868388df9f9485">[email&#160;protected]</span></a> | <a href="https://www.linkedin.com/in/scott-m-lowry/" target="_blank">LinkedIn</a>
     </p>
   </div>
 </div>
 
   <div class="section">
     <h2>Summary</h2>
-    <p>Experienced Systems Engineer specializing in Microsoft 365, Intune, Azure, and Zero Trust security. Background includes securing cloud and endpoint systems, streamlining device management, and automating workflows at scale. Known for bridging operational gaps between IT, security, and end users.</p>
-  </div>
-
-  <div class="section">
-    <h2>Certifications</h2>
-    <ul>
-      <li>Microsoft 365 Certified: Administrator Expert (MS-102)</li>
-      <li>Microsoft Certified: Identity & Access Administrator Associate (SC-300)</li>
-      <li>CompTIA Security+, Network+, A+</li>
-      <li>Apple Certified iOS Technician (ACiT), Mac Technician (ACMT), Support Professional (ACSP)</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Professional Experience</h2>
-    <p><strong>Senior Systems Engineer</strong><br>Swiftly – Seattle, WA (Remote) | Oct 2022 – Sep 2024</p>
-    <ul>
-      <li>Designed and optimized cloud infrastructure for a fully remote global team, automating workflows between IT, project managers, and software engineers using custom Wrike and Jira integrations to reduce manual effort and accelerate cross-team operations.</li>
-      <li>Deployed and managed Intune and Kandji for Apple, Windows, and Android devices; automated device provisioning, enforced security, and streamlined patch management and compliance. Increased device compliance from 65% to 95% in three months.</li>
-      <li>Created custom forms and automation using REST APIs in FreshService to streamline user and HR requests such as SaaS app provisioning and employee onboarding. Reduced time to onboard a new user by 50%.</li>
-      <li>Led project to increase Microsoft Secure Score by 25%, reducing risk exposure and aligning systems with compliance frameworks by using Conditional Access and Defender for Cloud.</li>
-    </ul>
-
-    <p><strong>Systems Engineer</strong><br>LO3 Energy – Portland, OR (Remote) | May 2022 – Oct 2022</p>
-    <ul>
-      <li>Automated AWS infrastructure deployment using Terraform, implementing scalable, secure, and compliant cloud solutions to support business operations.</li>
-      <li>Managed JumpCloud for Identity Provider (IdP) services and Mobile Device Management (MDM), centralizing access control and enforcing device compliance across a remote workforce.</li>
-      <li>Administered Google Workspace tenant to manage Identity and Access Management (IAM), secure email communication, and support collaborative workflows using Google Docs.</li>
-      <li>Supported SOC 2 and GDPR compliance by implementing encryption, logging, and least-privilege access controls across cloud and endpoint systems.</li>
-    </ul>
-
-    <p><strong>Systems Administrator</strong><br>Pamplin Communications – Milwaukie, OR (Hybrid) | Jul 2021 – May 2022</p>
-    <ul>
-      <li>Supported hybrid infrastructure across 16 different Pamplin-owned businesses, managing VMware ESXi, Sophos firewalls, Windows Server, and Azure to ensure uptime, performance, and security for 300+ users.</li>
-      <li>Led Sophos Phish Threat security awareness campaigns, analyzing employee risk exposure and refining anti-phishing training strategies to mitigate cyber threats. Reduced simulated phishing click-through rate by 35%. </li>
-      <li>Initiated and oversaw deployment of Mosyle MDM to onboard and manage macOS devices across previously unmanaged environments, improving visibility, enforcing policies, and streamlining device setup.</li>
-      <li>Improved email deliverability for marketing campaigns by 25% after implementing DMARC, SPF, and DKIM policies.</li>
-    </ul>
-
-    <p><strong>Systems Administrator</strong><br>Direct Marketing Solutions – Portland, OR (Hybrid) | Nov 2018 – Jul 2021</p>
-    <ul>
-      <li>Maintained and supported hybrid infrastructure spanning three offices, Azure cloud, and a colocation facility for 300+ employees across 24/7 operations. Ensured high availability using VMware ESXi, Windows Server, and Fortinet firewalls.</li>
-      <li>Enforced Intune policies and automated compliance configurations for macOS, Windows, and Android devices; reduced manual provisioning effort by 40% and improved endpoint security posture.</li>
-      <li>Managed Microsoft Defender for Endpoint and server protection, reducing vulnerabilities through hardening policies and continuous monitoring.</li>
-      <li>Contributed to successful SOC 2 audits by documenting controls, remediating risks, and aligning infrastructure with compliance frameworks.</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Lab Projects</h2>
-    <p><strong>Microsoft 365 Lab</strong></p>
-    <ul>
-      <li>Built and maintain a tenant using Microsoft 365 Business Premium with Entra ID P2, simulating enterprise identity and endpoint security environments.</li>
-      <li>Configured Conditional Access, Microsoft Defender for Business, Intune, and DLP policies across Windows, macOS, and mobile test devices.</li>
-      <li>Deployed SPF, DKIM, and DMARC to ensure secure mail delivery and prevent domain spoofing.</li>
-    </ul>
-
-    <p><strong>Proxmox Lab</strong></p>
-    <ul>
-      <li>Built and manage a Proxmox-based home lab for self-hosting VMs and LXC containers including Pi-hole, pfSense, Unifi Controller, Plex, and Windows 11 for Intune testing.</li>
-      <li>Design and test backup, failover, and snapshot strategies to simulate real-world infrastructure management scenarios.</li>
-      <li>Test integrations with Microsoft 365 and other SaaS services, simulate DNS/email routing, and evaluate endpoint management policies in a safe sandbox environment.</li>
-      <li>Deployed Cloudflare tunnels and Wireguard VPN for remote access and integration with cloud networks.</li>
-      <li>Developed automation to manage updates and data across hosts, VMs, and containers using scripting and CLI tools.</li>
-    </ul>
+    <p>Microsoft Security Architect with expertise in Microsoft 365, Entra ID, Intune, and Defender. Builds secure, scalable identity and endpoint strategies using Conditional Access, PIM, and automation across hybrid and cloud-only environments. Focused on Zero Trust, compliance, and business alignment.</p>
   </div>
 
   <div class="section">
     <h2>Skills</h2>
     <ul>
-      <li><strong>Identity & Access Management (IAM):</strong> Entra ID, SSO & Provisioning (SAML, OIDC, SCIM), Google Workspace, Microsoft 365, Zero Trust</li>
-      <li><strong>Endpoint Management (MDM):</strong> Intune, Kandji, Mosyle, Autopilot, Apple Business Manager</li>
-      <li><strong>Automation & Scripting:</strong> Bash, PowerShell, REST APIs</li>
-      <li><strong>Tools & Platforms:</strong> Microsoft Defender, FreshService, Jira, Wrike, Proxmox, VMware ESXi, Sophos, Fortinet, pfSense, Unifi, Cloudflare</li>
-      <li><strong>Cloud Infrastructure:</strong> Azure, AWS, GCP</li>
+      <li><strong>Cloud Identity & Security:</strong> Entra ID, Active Directoy, Conditional Access, MFA, PIM, SSO (SAML, OIDC), SCIM</li>
+      <li><strong>Endpoint Management:</strong> Intune, Kandji, Mosyle, Apple Business Manager, Autopilot</li>
+      <li><strong>Automation & Tools:</strong> PowerShell, Bash, MS Graph, REST APIs, Power Automate, FreshService</li>
+      <li><strong>Collaboration Tools:</strong> Exchange Online, Teams, SharePoint</li>
     </ul>
   </div>
 
   <div class="section">
+    <h2>Certifications</h2>
+    <ul>
+      <li>Microsoft | Microsoft 365 Administrator Expert (MS-102) | January 2025</li>
+      <li>Microsoft | Identity & Access Administrator Associate (SC-300) | January 2025</li>
+      <li>Microsoft | Azure Security Engineer Associate (AZ-500) | In Progress</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Professional Experience</h2>
+    <p><strong>Swiftly | Seattle, WA | Oct 2022 - Sep 2024</strong><br><em>Senior Systems Engineer</em></p>
+    <ul>
+      <li>Implemented Conditional Access, Defender for Cloud, and least-privilege roles, increasing Microsoft Secure Score by 25%</li>
+      <li>Deployed and configured Intune and Kandji MDM services, raising device compliance from 65% to 95%</li>
+      <li>Automated onboarding and SaaS integration using REST APIs with FreshService, Entra ID, and Kandji, reducing provisioning time and errors by 40%</li>
+      <li>Migrated acquired company from Gmail to Exchange Online, managing mailbox transfers, DNS updates, and Entra ID alignment</li>
+      <li>Configured and automated B2B access in Entra ID and Auth0, enabling secure external collaboration</li>
+      <li>Deployed Barracuda CloudGen Access to secure remote access to Azure-hosted databases using policy-based least-privilege controls</li>
+    </ul>
+
+    <p><strong>Pamplin Communications | Milwaukie, OR | Jul 2021 - May 2022</strong><br><em>Systems Administrator</em></p>
+    <ul>
+      <li>Deployed Mosyle to enforce MDM policies across unmanaged macOS devices, improving endpoint compliance and visibility</li>
+      <li>Migrated from Mitel to Zoom Phone, integrating with Entra ID for SSO and automating deployment via MDM</li>
+      <li>Configured Sophos VPN to enforce Entra ID MFA using NPS extension, strengthening remote access security</li>
+      <li>Secured Windows Server Update Services (WSUS) with SSL to mitigate man-in-the-middle risks during update delivery</li>
+    </ul>
+
+    <p><strong>Direct Marketing Solutions | Portland, OR | Nov 2018 - Jul 2021</strong><br><em>Systems Administrator</em></p>
+    <ul>
+      <li>Integrated Microsoft 365 with on-prem Active Directory using Entra ID and E5 licensing</li>
+      <li>Migrated endpoint management to Intune for Windows and macOS; served as Apple SME for compliance and deployment</li>
+      <li>Migrated on-prem Exchange to Exchange Online, managing mailbox moves, DNS, and mail flow configuration</li>
+      <li>Implemented Defender for Endpoint to replace legacy antivirus and deployed Microsoft Sentinel for centralized monitoring of on-prem security events</li>
+    </ul>
+    <p><em>IT Technician</em></p>
+    <ul>
+      <li>Served as Tier I-III helpdesk, deployed workstations, and assisted with SOC 2 compliance prior to promotion</li>
+    </ul>
+  </div>
+
+    <div class="section">
+    <h2>Projects</h2>
+    <p><strong>Microsoft 365 & Azure Security Lab | December 2024 - Present</strong></p>
+    <ul>
+      <li>Created and actively maintain a personal Microsoft 365 Business Premium tenant with Entra ID P2, Intune, Defender, and Exchange Online</li>
+      <li>Designed and tested security configurations including Conditional Access, PIM, and DLP aligned to Zero Trust frameworks</li>
+      <li>Earned Microsoft 365 Administrator Expert (MS-102) and Identity & Access Administrator (SC-300) certifications during this period and now using lab to prepare for Azure Security Engineer Associate (AZ-500) certification</li>
+    </ul>
+  </div>
+  
+  <div class="section">
     <h2>Education</h2>
-    <p><strong>High School Diploma</strong><br>Brookstone School, Columbus, GA</p>
+    <p><strong>Brookstone School | Columbus, GA</strong><br><em>High School Diploma</em></p>
   </div>
   
   <footer style="margin-top: 60px; font-size: 0.9em; color: #777; text-align: center; border-top: 1px solid #ccc; padding-top: 20px;">
-    <p>This site is self-hosted from my home lab using <strong>Caddy</strong>, <strong>LXC (Proxmox)</strong>, and securely routed through <strong>Cloudflare</strong>.</p>
+    <p>This site is hosted using <strong>Azure Static Pages</strong>.</p>
   </footer>
-</body>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
 </html>
