--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       Springfield, OR<br />
       <a id="email-link" href="#">[email protected]</a>
       <script>
-        const user = "scott";
-        const domain = "lowry.net";
+        const user = "Scott";
+        const domain = "ScottLowry.net";
         const email = `${user}@${domain}`;
         const link = document.getElementById("email-link");
         link.href = `mailto:${email}`;
