--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h1>Scott Lowry</h1>
     <p>
       Springfield, OR<br />
-      <a id="email-link" href="#">[email protected]</a>
+      <a id="email-link" href="#">[email protected]</a>
       <script>
         const user = "Scott";
         const domain = "ScottLowry.net";
@@ -160,6 +160,11 @@
   
   <footer style="margin-top: 60px; font-size: 0.9em; color: #777; text-align: center; border-top: 1px solid #ccc; padding-top: 20px;">
     <p>This site is hosted using <strong>Azure Static Pages</strong>.</p>
+        <p>
+      <a href="https://github.com/scottlowry/ScottLowry.net/actions">
+        <img src="https://github.com/scottlowry/ScottLowry.net/actions/workflows/azure-static-web-apps-green-pond-01e8f0b0f.yml/badge.svg" alt="Deploy Status" />
+      </a>
+    </p>
   </footer>
 </body>
 </html>
