--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <footer style="margin-top: 60px; font-size: 0.9em; color: #777; text-align: center; border-top: 1px solid #ccc; padding-top: 20px;">
     <p>This site is hosted using <strong>Azure Static Pages</strong>.</p>
         <p>
-      <a href="https://github.com/scottlowry/ScottLowry.net/actions">
+      <a href="https://github.com/scottlowry/ScottLowry.net/actions/workflows/azure-static-web-apps-green-pond-01e8f0b0f.yml">
         <img src="https://github.com/scottlowry/ScottLowry.net/actions/workflows/azure-static-web-apps-green-pond-01e8f0b0f.yml/badge.svg" alt="Deploy Status" />
       </a>
     </p>
