--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   </div>
   
   <footer style="margin-top: 60px; font-size: 0.9em; color: #777; text-align: center; border-top: 1px solid #ccc; padding-top: 20px;">
-    <p>This site is hosted using <strong>Azure Static Pages</strong> and deployed using <strong>GitHub Actions</strong>.</p>
+    <p>This site is hosted as an <strong>Azure Static Web App</strong> and deployed using <strong>GitHub Actions</strong>.</p>
         <p>
         <a href="https://github.com/scottlowry/ScottLowry.net/actions/workflows/azure-static-web-apps-agreeable-tree-0f0c02a1e.yml">
         <img src="https://github.com/scottlowry/ScottLowry.net/actions/workflows/azure-static-web-apps-agreeable-tree-0f0c02a1e.yml/badge.svg" alt="Deploy Status" />
