--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
         link.textContent = email;
       </script>
       | <a href="https://www.linkedin.com/in/scott-m-lowry/" target="_blank">LinkedIn</a>
+      | <a href="https://www.github.com/scottlowry/" target="_blank">GitHub</a>
     </p>
   </div>
 </div>
