--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/png" href="favicon.png">
   <title>Scott Lowry - Microsoft Security Architect</title>
-  <meta name="description" content="Microsoft Security Architect with expertise in Microsoft 365, Entra ID, Intune, and Defender. Builds secure, scalable identity and endpoint strategies using Conditional Access, PIM, and automation across hybrid and cloud-only environments. Focused on Zero Trust, compliance, and business alignment."/>
+  <meta name="description" content="Microsoft Security Engineer with experience securing hybrid M365 environments for global remote teams. Skilled in Conditional Access, Intune, PIM, and automation with Graph and REST APIs. Aligned with DevOps to streamline identity, access, and device compliance in Agile environments."/>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -82,23 +82,22 @@
         link.textContent = email;
       </script>
       | <a href="https://www.linkedin.com/in/scott-m-lowry/" target="_blank">LinkedIn</a>
-      | <a href="https://www.github.com/scottlowry/" target="_blank">GitHub</a>
     </p>
   </div>
 </div>
 
   <div class="section">
     <h2>Summary</h2>
-    <p>Microsoft Security Architect with expertise in Microsoft 365, Entra ID, Intune, and Defender. Builds secure, scalable identity and endpoint strategies using Conditional Access, PIM, and automation across hybrid and cloud-only environments. Focused on Zero Trust, compliance, and business alignment.</p>
+    <p>Microsoft Security Engineer with experience securing hybrid M365 environments for global remote teams. Skilled in Conditional Access, Intune, PIM, and automation with Graph and REST APIs. Aligned with DevOps to streamline identity, access, and device compliance in Agile environments.</p>
   </div>
 
   <div class="section">
     <h2>Skills</h2>
     <ul>
-      <li><strong>Cloud Identity & Security:</strong> Entra ID, Active Directoy, Conditional Access, MFA, PIM, SSO (SAML, OIDC), SCIM</li>
-      <li><strong>Endpoint Management:</strong> Intune, Kandji, Mosyle, Apple Business Manager, Autopilot</li>
-      <li><strong>Automation & Tools:</strong> PowerShell, Bash, MS Graph, REST APIs, Power Automate, FreshService</li>
-      <li><strong>Collaboration Tools:</strong> Exchange Online, Teams, SharePoint</li>
+      <li><strong>Identity & Security:</strong> Entra ID, Active Directoy, Auth0, Conditional Access, MFA, PIM, SSO, RBAC</li>
+      <li><strong>Endpoint Management:</strong> Intune, Kandji, Mosyle, Apple Business Manager, Autopilot, Defender</li>
+      <li><strong>Automation & Tools:</strong> PowerShell, Bash, Bicep, Azure CLI, MS Graph, REST APIs</li>
+      <li><strong>Collaboration Tools:</strong> Exchange Online, Teams, SharePoint, Freshservice, Jira, GitHub</li>
     </ul>
   </div>
 
@@ -115,28 +114,28 @@
     <h2>Professional Experience</h2>
     <p><strong>Swiftly | Seattle, WA | Oct 2022 - Sep 2024</strong><br><em>Senior Systems Engineer</em></p>
     <ul>
-      <li>Implemented Conditional Access, Defender for Cloud, and least-privilege roles, increasing Microsoft Secure Score by 25%</li>
-      <li>Deployed and configured Intune and Kandji MDM services, raising device compliance from 65% to 95%</li>
-      <li>Automated onboarding and SaaS integration using REST APIs with FreshService, Entra ID, and Kandji, reducing provisioning time and errors by 40%</li>
-      <li>Migrated acquired company from Gmail to Exchange Online, managing mailbox transfers, DNS updates, and Entra ID alignment</li>
-      <li>Configured and automated B2B access in Entra ID and Auth0, enabling secure external collaboration</li>
-      <li>Deployed Barracuda CloudGen Access to secure remote access to Azure-hosted databases using policy-based least-privilege controls</li>
+      <li>Implemented Conditional Access, Defender for Cloud, and RBAC; improved Microsoft Secure Score by 25%</li>
+      <li>Deployed and managed Intune for Windows and Kandji for macOS devices, including Mac Studios used in Azure DevOps pipelines; increased device compliance from 65% to 95%</li>
+      <li>Automated onboarding and SaaS app provisioning in Freshservice; reducing provisioning time and errors by 40%</li>
+      <li>Migrated acquired company from Google Workspace to Exchange Online; handled mail, DNS, and identity</li>
+      <li>Automated B2B access in Entra ID and Auth0 for secure external collaboration with clients</li>
+      <li>Managed access and integrations for GitHub, Azure DevOps, AppCenter, Jira, Wrike, HubSpot, and other SaaS platforms</li>
     </ul>
 
     <p><strong>Pamplin Communications | Milwaukie, OR | Jul 2021 - May 2022</strong><br><em>Systems Administrator</em></p>
     <ul>
-      <li>Deployed Mosyle to enforce MDM policies across unmanaged macOS devices, improving endpoint compliance and visibility</li>
-      <li>Migrated from Mitel to Zoom Phone, integrating with Entra ID for SSO and automating deployment via MDM</li>
-      <li>Configured Sophos VPN to enforce Entra ID MFA using NPS extension, strengthening remote access security</li>
-      <li>Secured Windows Server Update Services (WSUS) with SSL to mitigate man-in-the-middle risks during update delivery</li>
+      <li>Migrated from Mitel to Zoom Phone integrated with Entra ID for SSO and automated deployment via MDM and Group Policy for ~150 users</li>
+      <li>Deployed Mosyle to enforce MDM policies across unmanaged macOS devices, improving endpoint compliance and visibility for ~75 devices</li>
+      <li>Implemented SPF, DKIM, and DMARC for marketing emails, reducing spoofing risk and improving inbox deliverability by 15%</li>
+      <li>Secured Sophos VPN with Entra ID MFA using NPS extension to strengthen remote access</li>
     </ul>
 
     <p><strong>Direct Marketing Solutions | Portland, OR | Nov 2018 - Jul 2021</strong><br><em>Systems Administrator</em></p>
     <ul>
-      <li>Integrated Microsoft 365 with on-prem Active Directory using Entra ID and E5 licensing</li>
-      <li>Migrated endpoint management to Intune for Windows and macOS; served as Apple SME for compliance and deployment</li>
-      <li>Migrated on-prem Exchange to Exchange Online, managing mailbox moves, DNS, and mail flow configuration</li>
-      <li>Implemented Defender for Endpoint to replace legacy antivirus and deployed Microsoft Sentinel for centralized monitoring of on-prem security events</li>
+      <li>Migrated ~200 mailboxes from on-prem Exchange to Exchange Online, managing mailbox moves, DNS, and mail flow</li>
+      <li>Deployed Intune for ~250 Windows and macOS devices; served as Apple SME for compliance and enrollment</li>
+      <li>Integrated Microsoft 365 with on-prem Active Directory via Entra ID with E5 licensing for ~150 users</li>
+      <li>Replaced legacy antivirus with Defender for Endpoint and deployed Sentinel for centralized event monitoring</li>
     </ul>
     <p><em>IT Technician</em></p>
     <ul>
@@ -150,6 +149,8 @@
     <ul>
       <li>Created and actively maintain a personal Microsoft 365 Business Premium tenant with Entra ID P2, Intune, Defender, and Exchange Online</li>
       <li>Designed and tested security configurations including Conditional Access, PIM, and DLP aligned to Zero Trust frameworks</li>
+      <li>Deployed ScottLowry.net as an Azure Static Web App using GitHub Actions for automated CI/CD</li>
+      <li>Simulated home lab infrastructure in Azure using Infrastructure as Code (IaC) with Bicep and Azure CLI</li>
       <li>Earned Microsoft 365 Administrator Expert (MS-102) and Identity & Access Administrator (SC-300) certifications during this period and now using lab to prepare for Azure Security Engineer Associate (AZ-500) certification</li>
     </ul>
   </div>
