--- a/www/content/apps/pixel-draw/index.html
+++ b/www/content/apps/pixel-draw/index.html
@@ -1,5 +1,7 @@
 ---
 layout: raw
+title: Pixel Draw
+summary: A simple web app for drawing on a canvas with a color picker and undo/redo functionality
 ---
 <!DOCTYPE html>
 <html>
