--- a/www/content/apps/pixel-draw/index.html
+++ b/www/content/apps/pixel-draw/index.html
@@ -2,7 +2,7 @@
 title: "Pixel Draw"
 date: 2025-06-20
 draft: false
-description: "A collaborative pixel drawing web app with real-time updates and WebSocket connectivity"
+summary: "A collaborative pixel drawing web app with real-time updates and WebSocket connectivity"
 showToc: false
 ---
 
