--- a/www/content/apps/pixel-draw/index.html
+++ b/www/content/apps/pixel-draw/index.html
@@ -210,6 +210,16 @@ showToc: false
       gap: 6px;
     }
   }
+  
+  /* Reduce spacing between share buttons and footer */
+  .share-buttons {
+    margin-bottom: 1rem !important;
+  }
+  
+  /* Additional spacing reduction for the entire post content */
+  .post-content {
+    margin-bottom: 1rem;
+  }
 </style>
 
 <script>
