--- a/www/content/apps/pixel-draw/index.html
+++ b/www/content/apps/pixel-draw/index.html
@@ -213,12 +213,27 @@ showToc: false
   
   /* Reduce spacing between share buttons and footer */
   .share-buttons {
-    margin-bottom: 1rem !important;
+    margin-bottom: 0 !important;
   }
   
   /* Additional spacing reduction for the entire post content */
   .post-content {
-    margin-bottom: 1rem;
+    margin-bottom: 0;
+  }
+  
+  /* Remove any additional spacing after share buttons */
+  .post-content > *:last-child {
+    margin-bottom: 0;
+  }
+  
+  /* Target the main content area to remove bottom spacing */
+  main {
+    margin-bottom: 0;
+  }
+  
+  /* Remove spacing from the article element */
+  article {
+    margin-bottom: 0;
   }
 </style>
 
