--- a/www/content/apps/pixel-draw/index.html
+++ b/www/content/apps/pixel-draw/index.html
@@ -216,34 +216,14 @@ showToc: false
     margin-bottom: 0;
   }
   
-  /* Target all possible elements that might have bottom spacing */
-  .post-content,
-  .post-content > *,
-  .share-buttons,
-  .share-buttons > *,
-  main,
-  main > *,
-  article,
-  article > *,
-  .entry-content,
-  .entry-content > * {
-    margin-bottom: 0 !important;
-    padding-bottom: 0 !important;
+  /* Simple fix: just reduce the bottom margin of the post content */
+  .post-content {
+    margin-bottom: 0;
   }
   
-  /* Specifically target the last elements */
-  .post-content > *:last-child,
-  .entry-content > *:last-child,
-  main > *:last-child,
-  article > *:last-child {
-    margin-bottom: 0 !important;
-    padding-bottom: 0 !important;
-  }
-  
-  /* Remove any footer spacing */
-  footer {
-    margin-top: 0 !important;
-    padding-top: 0 !important;
+  /* Target the main content wrapper */
+  .post {
+    margin-bottom: 0;
   }
 </style>
 
