--- a/www/content/apps/pixel-draw/index.html
+++ b/www/content/apps/pixel-draw/index.html
@@ -6,6 +6,8 @@ summary: "A collaborative pixel drawing web app with real-time updates displayed
 showToc: false
 ---
 
+Whatever is drawn on the canvas will be displayed on a NodeMCU with an SSD1331 OLED display attached sitting on my desk. Multiple users can draw on the canvas simultaneously and the display will update in real-time.
+
 <div id="pixel-draw-app">
   <div id="colorpicker-row">
     <span id="colorpicker-label">Color:</span>
